intTests/test_type_errors/err028.saw
//
// Too many arguments for type constructor: String
//

let x : String Int = "abc";


